Revert "fix spacing"
This reverts commit 508d91378a960b1082439558dd438f3348d10060.

--- a/src/scripts/blocks/MapIntro/MapIntro.scss
+++ b/src/scripts/blocks/MapIntro/MapIntro.scss
@@ -12,7 +12,7 @@
 }
 
 .map-intro {
-    margin: fn.toVw(156) 0 fn.toVw(212) 0;
+    padding: fn.toVw(156) 0 fn.toVw(212) 0;
 
     &.no-content {
         padding-bottom: 0;
