--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -184,8 +184,7 @@ a {
 }
 
 .solutions-list {
-    margin: fn.toVw(79) 0 0;
-    padding-bottom: fn.toVw(79);
+    margin: fn.toVw(79) 0;
 
     @include mx.phone {
         height: 100vh;
@@ -215,9 +214,6 @@ a {
             overflow: hidden;
 
             padding: 0 fn.toVw(10);
-
-            display: flex;
-            flex-direction: column;
 
             @include mx.phone {
                 padding: fn.toVw(12);
@@ -251,12 +247,6 @@ a {
             }
 
             .content-wrapper {
-                flex-grow: 1;
-
-                display: flex;
-                flex-direction: column;
-                align-items: flex-start;
-
                 @include mx.phone {
                     padding: 0 fn.toVw(18);
                 }
@@ -293,7 +283,6 @@ a {
 
                 p {
                     margin-right: fn.toVw(11);
-                    flex-grow: 1;
 
                     @include mx.phone {
                         margin: 0;
